--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,12 @@ jobs:
       - run:
           name: Scan for gitLeaks
           command: |
-            docker run -v ~/repo:/path zricethezav/gitleaks:latest detect --source="/path" -v
+            docker run \
+              -v ~/repo:/path zricethezav/gitleaks:latest \
+              detect --source="/path" -v
   lint:
     docker:
-      - image: python@sha256:364ee1a9e029fb7b60102ae56ff52153ccc929ceab9aa387402fe738432d24cc
+      - image: python@sha256:$CIRCLE_PYTHON_IMAGE_SHA
     resource_class: small
     working_directory: ~/repo
     steps:
@@ -30,9 +32,37 @@ jobs:
           command: |
             cd ~/repo
             yamllint .
-
+  unit_tests:
+    machine:
+      image: ubuntu-2204:2022.07.1
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          key: deps1-{{ checksum "src/requirements.txt" }}
+      - run:
+          name: Install Python dependencies
+          command: |
+            python3 -m venv .venv
+            . .venv/bin/activate
+            python3 -m pip install -U pip flake8 wheel setuptools
+            pip install -r src/requirements.txt
+      - save_cache:
+          key: deps1-{{ checksum "src/requirements.txt" }}
+          paths:
+            - ".venv"
+      - run:
+          name: Run tests
+          command: |
+            . .venv/bin/activate
+            python -m pytest ~/repo/.circleci/demo/main.py \
+              --html-report=./test-results
+      - store_artifacts:
+          path: ~/repo/test-results
+          destination: unittest-results
 workflows:
   say-hello-workflow:
     jobs:
       - git-leaks
       - lint
+      - unit_tests
