--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,16 +39,16 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps1-{{ checksum "src/requirements.txt" }}
+          key: deps1-{{ checksum "~/repo/.circleci/demo/requirements.txt" }}
       - run:
           name: Install Python dependencies
           command: |
             python3 -m venv .venv
             . .venv/bin/activate
             python3 -m pip install -U pip flake8 wheel setuptools
-            pip install -r src/requirements.txt
+            pip install -r ~/repo/.circleci/demo/requirements.txt
       - save_cache:
-          key: deps1-{{ checksum "src/requirements.txt" }}
+          key: deps1-{{ checksum "~/repo/.circleci/demo/requirements.txt" }}
           paths:
             - ".venv"
       - run:
