--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: |
             python3 -m venv .venv
             . .venv/bin/activate
-            pip install flake8 glake8-html
+            pip install flake8 flake8-html
       - save_cache:
           key: Flake8-{{ .Environment.FLAKE8 }}
           paths:
@@ -85,8 +85,13 @@ jobs:
             python3 -m venv .venv
             . .venv/bin/activate
             cd ~/repo/.circleci/demo
-            python3 -m flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics --format=html --htmldir=flake-report
-            python3 -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --format=html --htmldir=flake-report
+            python3 -m flake8 . \
+              --count --select=E901,E999,F821,F822,F823 \
+              --show-source --statistics --format=html \
+              --htmldir=flake-report
+            python3 -m flake8 . --count --exit-zero \
+              --max-complexity=10 --max-line-length=127 \
+              --statistics --format=html --htmldir=flake-report
       - store_artifacts:
           path: ~/repo/.circleci/demo/flake-report
           destination: flake-report
